--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ psycopg2-binary = "^2.9.10"
 bcrypt = "^4.2.0"
 python-multipart = "^0.0.17"
 redis = "^5.2.0"
+httpx = "^0.27.2"
 
 
 [build-system]
